--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </nav>
     </header>
 
-    <img src="img/bicyclists-in-forest.jpg alt="bicyclist in forest">
+    <img src="img/bicyclists-in-forest.jpg" alt="bicyclist in forest">
     <h1>MAXIMUS MTB TOURS</h1>
     <h3>Організація турів на велосипедах в Карпатах</h3>
-    <button id="замовити" class="button">ЗАМОВИТИ</button>
+    <button id="call" class="button">ЗАМОВИТИ</button>
 
     <h2 id="блок-заголовок">ЧОМУ ВАМ ПОТРІБНО ВІДПРАВИТИСЬ В ТУР?</h2>
     <img src="img/photo-icon.jpg" alt="photo icon">
@@ -35,10 +35,10 @@
 
     <img src="img/carpatian-dragobrat.jpg" id="tours" alt="carpatian dragobrat">
     <h2>СЛАВСЬКЕ - ПЕРЕВАЛ БЕСКИД - ВОДОСПАД ШИПІТ</h2>
-    <button id="замовити" class="button">ЗАМОВИТИ</button>
+    <button id="call" class="button">ЗАМОВИТИ</button>
     <img src="img/carpatian-lake.jpg" alt="carpatian lake">
     <h2>ВОЛОВЕЦЬ - ПОЛОНИНА БОРЖАВА - ВОДОСПАД ШИПІТ</h2>
-    <button id="замовити" class="button">ЗАМОВИТИ</button>
+    <button id="call" class="button">ЗАМОВИТИ</button>
 
     <img src="img/clients-rewiev.jpg" alt="clients rewiev">
     <h2 id="testomonials">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
