--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MAXIMUS MTB SCHOOL</title>
+    <title>MAXIMUS MTB ШКОЛА</title>
 </head>
 
 <body>
@@ -17,45 +17,54 @@
         </nav>
     </header>
 
-    <img src="img/bicyclists-in-forest.jpg" alt="bicyclist in forest">
+    <img src="img/bicyclists-in-forest.jpg" alt="велосипедисти в лісі">
     <h1>MAXIMUS MTB TOURS</h1>
     <h3>Організація турів на велосипедах в Карпатах</h3>
     <button id="call" class="button">ЗАМОВИТИ</button>
 
     <h2 id="блок-заголовок">ЧОМУ ВАМ ПОТРІБНО ВІДПРАВИТИСЬ В ТУР?</h2>
-    <img src="img/photo-icon.jpg" alt="photo icon">
+    <img src="img/photo-icon.jpg" alt="фотоапарат іконка">
     <h3>НОВІ ВРАЖЕННЯ</h3>
     <p>Отримайте нові враження та відчуття, якими можна поділитись з друзями та запам'ятати їх на все життя.</p>
-    <img src="img/off-icon.jpg" alt="off icon">
+    <img src="img/off-icon.jpg" alt="виключення іконка">
     <h3>ПЕРЕЗАВАНТАЖЕННЯ</h3>
     <p>Адреналін допоможе Вам швидко зробити перезавантаження мислення та відкрити для себе нові горизонти.</p>
-    <img src="img/heart-icon.jpg" alt="heart icon">
+    <img src="img/heart-icon.jpg" alt="серцебиття іконка">
     <h3>АКТИВНІСТЬ</h3>
     <p>Велосипедні тури в горах допоможуть Вам зробити тіло витривалішим та готовим до будь-яких випробувань</p>
 
-    <img src="img/carpatian-dragobrat.jpg" id="tours" alt="carpatian dragobrat">
+    <img src="img/carpatian-dragobrat.jpg" id="tours" alt="драгобрат карпати">
     <h2>СЛАВСЬКЕ - ПЕРЕВАЛ БЕСКИД - ВОДОСПАД ШИПІТ</h2>
     <button id="call" class="button">ЗАМОВИТИ</button>
-    <img src="img/carpatian-lake.jpg" alt="carpatian lake">
+    <img src="img/carpatian-lake.jpg" alt="карпатське озеро">
     <h2>ВОЛОВЕЦЬ - ПОЛОНИНА БОРЖАВА - ВОДОСПАД ШИПІТ</h2>
     <button id="call" class="button">ЗАМОВИТИ</button>
 
-    <img src="img/clients-rewiev.jpg" alt="clients rewiev">
+    <img src="img/clients-rewiev.jpg" alt="зображення клієнтів">
     <h2 id="testomonials">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
-    <img src="img/client-vasyl.jpg" alt="client vasyl">
+    <img src="img/client-vasyl.jpg" alt="василь багдай">
     <p> Поїздка видалась наповнена шаленою кількістю адреналіну!Ми зарядились енергією для нових досягнень. Дякую!</p>
     <h4>ВАСИЛЬ БАГДАЙ</h4>
-    <img src="img/review-stars.png" alt="star rewiev">
-    <img src="img/client-andriy.jpg" alt="client andriy">
+    <img src="img/review-stars.png" alt="зірки відгуку">
+    <img src="img/client-andriy.jpg" alt="андрій гриник">
     <p> Це була дуже насичена поїздка - гори та водоспад. Інструктор підтримував в будь-якій ситуації. Організація на висоті. Рекомендую! </p>
     <h4>Андрій Гриник</h4>
-    <img src="img/review-stars.png" alt="star rewiev">
+    <img src="img/review-stars.png" alt="зірки відгуку">
 
     <h2 id="contacts">КОНТАКТИ</h2>
-    <img src="img/phone-icon.png" alt="phone">
-    <img src="img/gmail-icon.png" alt="email">
-    <img src="img/instagram-icon.png" alt="instagram">
-    <img src="img/facebook-icon.png" alt="facebook">
+    <a href="tel:+380637806566">
+        <img src="img/phone-icon.png" alt="телефон">
+    </a>
+    <a href="mailto:simon.ms777@gmail.com">
+        <img src="img/gmail-icon.png" alt="емейл">
+    </a>
+    <a href="https://www.instagram.com/maximus_ride/">
+        <img src="img/instagram-icon.png" alt="інстаграм">
+    </a>
+    <a href="https://www.facebook.com/profile.php?id=100006927150781">
+         <img src="img/facebook-icon.png" alt="фейсбук">
+    </a>
+   
 
     <h3>МИ ЗВ'ЯЖЕМОСЬ З ВАМИ</h3>
     <form method="POST" action="https://formspree.io/simon.ms777@gmail.com">
