--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
 
-    <video src="img/bicyclists-in-forest.jpg" alt="велосипедисти в лісі">
+    <image src="img/bicyclists-in-forest.jpg" alt="велосипедисти в лісі">
     <h1>MAXIMUS МТБ ТУРИ</h1>
     <h3>Організація турів на велосипедах в Карпатах</h3>
     <button id="call" class="button">ЗАМОВИТИ</button>
@@ -70,13 +70,13 @@
     <section>
     <h3>МИ ЗВ'ЯЖЕМОСЬ З ВАМИ</h3>
     <form>
-        <div id="form-msg">
+        <div id="form-msg"></div>
         <input type="text" id="name" placeholder="ІМ'Я">
         <br>
         <input type="tel" id="tel" placeholder="ТЕЛЕФОН">
         <br>
         <input type="submit" id="submit-contact-form" value="ВІДПРАВИТИ">
-        </div>
+        
     </form>
     </section>
 
