--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <h3>МИ ЗВ'ЯЖЕМОСЬ З ВАМИ</h3>
     <form>
         <div id="form-msg"></div>
-        <input type="text" id="name" placeholder="ІМ'Я">
+        <input type="text" id="name" placeholder="ІМ'Я" required>
         <br>
-        <input type="tel" id="tel" placeholder="ТЕЛЕФОН">
+        <input type="tel" id="tel" placeholder="ТЕЛЕФОН" required>
         <br>
         <input type="submit" id="submit-contact-form" value="ВІДПРАВИТИ">
         
