--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div id="form-msg"></div>
         <input type="text" id="name" placeholder="ІМ'Я" required>
         <br>
-        <input type="tel" id="tel" placeholder="ТЕЛЕФОН" required>
+        <input type="tel" id="tel" placeholder="ТЕЛЕФОН" pattern="[0-9]{11}" required>
         <br>
         <input type="submit" id="submit-contact-form" value="ВІДПРАВИТИ">
         
