--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <h3>МИ ЗВ'ЯЖЕМОСЬ З ВАМИ</h3>
     <form>
         <div id="form-msg"></div>
-        <input type="text" id="name" placeholder="ІМ'Я" required>
+        <input type="text" id="name" placeholder="ІМ'Я" title="Напишіть нам, як до Вас звертатись" required>
         <br>
-        <input type="tel" id="tel" placeholder="ТЕЛЕФОН" pattern="[0-9]{11}" required>
+        <input type="tel" id="tel" placeholder="ТЕЛЕФОН" title="Залиште нам Ваш телефон, щоб ми розповіли Вам про наші тури" pattern="[0-9]{10}" required>
         <br>
         <input type="submit" id="submit-contact-form" value="ВІДПРАВИТИ">
         
