--- a/index.html
+++ b/index.html
@@ -5,83 +5,83 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>MAXIMUS MTB ШКОЛА</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-        <link rel="manifest" href="/img/favicon/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+        <link rel="manifest" href="img/favicon/site.webmanifest">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <style src="css/index.css"></style>   
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
+         <div class="main">
             <header>
                 <nav>
-                    <a href="#tours">ТУРИ</a>
+                    <a href="#chooseyourtour">ТУРИ</a>
                     <a href="#testomonials">ВІДГУКИ</a>
                     <a href="#contacts">КОНТАКТИ</a>
                 </nav>
             </header>
-        <div class="main">
-            <section id="mainbackground">
-                <image src="img/bicyclists-in-forest.jpg" alt="велосипедисти в лісі">
             <section id="mainblock">
-                <h1>MAXIMUS МТБ ТУРИ</h1>
-                <h3>Організація турів на велосипедах в Карпатах</h3>
-                <button id="call" class="button">ЗАМОВИТИ</button>
-            </section>
+                <h1 id="mtb-header">MAXIMUS МТБ ТУРИ</h1>
+                <h3 id="mtb-sub">Організація турів на велосипедах в Карпатах</h3>
+                <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button>
             </section>
         </div>
         <div class="why">
-            <section id="whyblock">
-                <h2 id="блок-заголовок">ЧОМУ ВАМ ПОТРІБНО ВІДПРАВИТИСЬ В ТУР?</h2>
-            </section>
+                <h2 id="blue-header">ЧОМУ ВАМ ПОТРІБНО ВІДПРАВИТИСЬ В ТУР?</h2>
+            <div class="whyblock">
             <section id="whyiconblock1">
-                <img src="img/photo-icon.jpg" alt="фотоапарат іконка">
-                <h3>НОВІ ВРАЖЕННЯ</h3>
+                <img src="img/photo-icon.jpg" id="photo-icon" alt="фотоапарат іконка">
+                <h4 id="blue-header">НОВІ ВРАЖЕННЯ</h4>
                 <p>Отримайте нові враження та відчуття, якими можна поділитись з друзями та запам'ятати їх на все життя.</p>
             </section>
             <section id="whyiconblock2">
-                <img src="img/off-icon.jpg" alt="виключення іконка">
-                <h3>ПЕРЕЗАВАНТАЖЕННЯ</h3>
+                <img src="img/off-icon.jpg" id="off-icon" alt="виключення іконка">
+                <h4 id="blue-header">ПЕРЕЗАВАНТАЖЕННЯ</h4>
                 <p>Адреналін допоможе Вам швидко зробити перезавантаження мислення та відкрити для себе нові горизонти.</p>
             </section>
             <section id="whyiconblock3">
-                <img src="img/heart-icon.jpg" alt="серцебиття іконка">
-                <h3>АКТИВНІСТЬ</h3>
+                <img src="img/heart-icon.jpg" id="heart-icon" alt="серцебиття іконка">
+                <h4 id="blue-header">АКТИВНІСТЬ</h4>
                 <p>Велосипедні тури в горах допоможуть Вам зробити тіло витривалішим та готовим до будь-яких випробувань</p>
             </section>
+            </div>
         </div>
         <div class="chooseyourtour">
             <section id="choosetour1">
-                <img src="img/carpatian-dragobrat.jpg" id="tours" alt="драгобрат карпати">
-                <h2>СЛАВСЬКЕ - ПЕРЕВАЛ БЕСКИД - ВОДОСПАД ШИПІТ</h2>
-                <button id="call" class="button">ЗАМОВИТИ</button>
             </section>
             <section id="choosetour2">
-                <img src="img/carpatian-lake.jpg" id="tour2" alt="карпатське озеро">
-                <h2>ВОЛОВЕЦЬ - ПОЛОНИНА БОРЖАВА - ВОДОСПАД ШИПІТ</h2>
-                <button id="call" class="button">ЗАМОВИТИ</button>
+                <h3 id="blue-header">СЛАВСЬКЕ - ПЕРЕВАЛ БЕСКИД - ВОДОСПАД ШИПІТ</h3>
+                <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button>
+            </section>
+            <section id="choosetour3">
+            </section>
+            <section id="choosetour4">
+                <h3 id="blue-header">ВОЛОВЕЦЬ - ПОЛОНИНА БОРЖАВА - ВОДОСПАД ШИПІТ</h3>
+                <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button>
             </section>
         </div>
         <div class="rewievs">
-            <img src="img/clients-rewiev.jpg" id="rewievbackground" alt="зображення клієнтів">
-            <section id="whyblock">
-                <h2 id="testomonials">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
+            <div class="ourclients">
+            <section id="testomonials">
+                <h2 id="blue-header">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
             </section>
             <section id="client1">
-                <img src="img/client-vasyl.jpg" alt="василь багдай">
-                <p>Поїздка видалась наповнена шаленою кількістю адреналіну!Ми зарядились енергією для нових досягнень. Дякую!</p>
-                <h4>ВАСИЛЬ БАГДАЙ</h4>
-                <img src="img/review-stars.png" alt="зірки відгуку">
+                <img src="img/client-vasyl.png" id="client-photo" alt="василь багдай">
+                <p>Поїздка видалась наповнена шаленою кількістю адреналіну! Ми зарядились енергією для нових досягнень. Дякую!</p>
+                <h4 id="blue-header">Василь Багдай</h4>
+                <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
             </section>
-            <section id="client1">
-                <img src="img/client-andriy.jpg" alt="андрій гриник">
-                <p>Це була дуже насичена поїздка - гори та водоспад. Інструктор підтримував в будь-якій ситуації. Організація на висоті. Рекомендую! </p>
-                <h4>Андрій Гриник</h4>
-                <img src="img/review-stars.png" alt="зірки відгуку">
+            <section id="client2">
+                <img src="img/client-andriy.png" id="client-photo" alt="андрій гриник">
+                <p>Це була дуже насичена поїздка - гори та водоспад. Інструктор підтримував в будь-якій ситуації. Організація на висоті! </p>
+                <h4 id="blue-header">Андрій Гриник</h4>
+                <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
             </section>
+            </div>
         </div>
-        <div class="rewievs">
+        <div class="contact-us">
             <h2 id="contacts">КОНТАКТИ</h2>
             <section id="phone">
                 <a href="tel:+380637806566">
