--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
-         <div class="main">
+        <div class="main">
             <header>
                 <nav>
-                    <a href="#chooseyourtour">ТУРИ</a>
+                    <a href="#choosetour1">ТУРИ</a>
                     <a href="#testomonials">ВІДГУКИ</a>
                     <a href="#contacts">КОНТАКТИ</a>
                 </nav>
@@ -25,86 +25,88 @@
             <section id="mainblock">
                 <h1 id="mtb-header">MAXIMUS МТБ ТУРИ</h1>
                 <h3 id="mtb-sub">Організація турів на велосипедах в Карпатах</h3>
-                <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button>
+                <button type="button" class="btn btn-danger btn-lg" href="#contacts">ЗАМОВИТИ</button>
             </section>
         </div>
         <div class="why">
-                <h2 id="blue-header">ЧОМУ ВАМ ПОТРІБНО ВІДПРАВИТИСЬ В ТУР?</h2>
+            <h2 id="blue-header">ЧОМУ ВАМ ПОТРІБНО ВІДПРАВИТИСЬ В ТУР?</h2>
             <div class="whyblock">
-            <section id="whyiconblock1">
-                <img src="img/photo-icon.jpg" id="photo-icon" alt="фотоапарат іконка">
-                <h4 id="blue-header">НОВІ ВРАЖЕННЯ</h4>
-                <p>Отримайте нові враження та відчуття, якими можна поділитись з друзями та запам'ятати їх на все життя.</p>
-            </section>
-            <section id="whyiconblock2">
-                <img src="img/off-icon.jpg" id="off-icon" alt="виключення іконка">
-                <h4 id="blue-header">ПЕРЕЗАВАНТАЖЕННЯ</h4>
-                <p>Адреналін допоможе Вам швидко зробити перезавантаження мислення та відкрити для себе нові горизонти.</p>
-            </section>
-            <section id="whyiconblock3">
-                <img src="img/heart-icon.jpg" id="heart-icon" alt="серцебиття іконка">
-                <h4 id="blue-header">АКТИВНІСТЬ</h4>
-                <p>Велосипедні тури в горах допоможуть Вам зробити тіло витривалішим та готовим до будь-яких випробувань</p>
-            </section>
+                <section id="whyiconblock1">
+                    <img src="img/photo-icon.jpg" id="photo-icon" alt="фотоапарат іконка">
+                    <h4 id="blue-header">НОВІ ВРАЖЕННЯ</h4>
+                    <p>Отримайте нові враження та відчуття, якими можна поділитись з друзями та запам'ятати їх на все життя.</p>
+                </section>
+                <section id="whyiconblock2">
+                    <img src="img/off-icon.jpg" id="off-icon" alt="виключення іконка">
+                    <h4 id="blue-header">ПЕРЕЗАВАНТАЖЕННЯ</h4>
+                    <p>Адреналін допоможе Вам швидко зробити перезавантаження мислення та відкрити для себе нові горизонти.</p>
+                </section>
+                <section id="whyiconblock3">
+                    <img src="img/heart-icon.jpg" id="heart-icon" alt="серцебиття іконка">
+                    <h4 id="blue-header">АКТИВНІСТЬ</h4>
+                    <p>Велосипедні тури в горах допоможуть Вам зробити тіло витривалішим та готовим до будь-яких випробувань</p>
+                </section>
             </div>
         </div>
         <div class="chooseyourtour">
-            <section id="choosetour1">
-            </section>
+            <section id="choosetour1"></section>
             <section id="choosetour2">
                 <h3 id="blue-header">СЛАВСЬКЕ - ПЕРЕВАЛ БЕСКИД - ВОДОСПАД ШИПІТ</h3>
-                <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button>
+                <button type="button" class="btn btn-danger btn-lg" href="#contacts">ЗАМОВИТИ</button>
             </section>
-            <section id="choosetour3">
-            </section>
+            <section id="choosetour3"></section>
             <section id="choosetour4">
                 <h3 id="blue-header">ВОЛОВЕЦЬ - ПОЛОНИНА БОРЖАВА - ВОДОСПАД ШИПІТ</h3>
-                <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button>
+                <button type="button" class="btn btn-danger btn-lg" href="#contacts">ЗАМОВИТИ</button>
             </section>
         </div>
         <div class="rewievs">
             <div class="ourclients">
-            <section id="testomonials">
-                <h2 id="blue-header">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
-            </section>
-            <section id="client1">
-                <img src="img/client-vasyl.png" id="client-photo" alt="василь багдай">
-                <p>Поїздка видалась наповнена шаленою кількістю адреналіну! Ми зарядились енергією для нових досягнень. Дякую!</p>
-                <h4 id="blue-header">Василь Багдай</h4>
-                <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
-            </section>
-            <section id="client2">
-                <img src="img/client-andriy.png" id="client-photo" alt="андрій гриник">
-                <p>Це була дуже насичена поїздка - гори та водоспад. Інструктор підтримував в будь-якій ситуації. Організація на висоті! </p>
-                <h4 id="blue-header">Андрій Гриник</h4>
-                <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
-            </section>
+                <section id="testomonials">
+                    <h2 id="blue-header">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
+                </section>
+                <section id="client1">
+                    <img src="img/client-vasyl.png" id="client-photo" alt="василь багдай">
+                    <p>Поїздка видалась наповнена шаленою кількістю адреналіну! Ми зарядились енергією для нових досягнень. Дякую!</p>
+                    <h4 id="blue-header">Василь Багдай</h4>
+                    <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
+                </section>
+                <section id="client2">
+                    <img src="img/client-andriy.png" id="client-photo" alt="андрій гриник">
+                    <p>Це була дуже насичена поїздка - гори та водоспад. Інструктор завжди підтримував нас. Організація на висоті! </p>
+                    <h4 id="blue-header">Андрій Гриник</h4>
+                    <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
+                </section>
             </div>
         </div>
         <div class="contact-us">
-            <h2 id="contacts">КОНТАКТИ</h2>
+            <section id="contacts">
+                <h2 id="blue-header">КОНТАКТИ</h2>
+            </section>
             <section id="phone">
                 <a href="tel:+380637806566">
-                    <img src="img/phone-icon.png" alt="телефон">
+                    <img src="img/phone-icon.png" id="phoneimg" alt="телефон">
                 </a>
             </section>
             <section id="contactmail">
                 <a href="mailto:simon.ms777@gmail.com">
-                    <img src="img/gmail-icon.png" alt="емейл">
+                    <img src="img/gmail-icon.png" id="emailimg" alt="емейл">
                 </a>
             </section>
             <section id="instagram">
                 <a href="https://www.instagram.com/maximus_ride/">
-                    <img src="img/instagram-icon.png" alt="інстаграм">
+                    <img src="img/instagram-icon.png" id="instagramimg" alt="інстаграм">
                 </a>
             </section>
             <section id="fb">
                 <a href="https://www.facebook.com/profile.php?id=100006927150781">
-                    <img src="img/facebook-icon.png" alt="фейсбук">
+                    <img src="img/facebook-icon.png" id="fbimg" alt="фейсбук">
                 </a>
             </section>
             <section id="contactform">
                 <h3>МИ ЗВ'ЯЖЕМОСЬ З ВАМИ</h3>
+            </section>
+            <section id="contactbody">
                 <form>
                     <div id="form-msg"></div>
                     <input type="text" id="name" placeholder="ІМ'Я" title="Напишіть нам, як до Вас звертатись" required>
@@ -116,7 +118,7 @@
             </section>
         </div>
         <footer>
-            <h3>MAXIMUS MTB TOURS, 2018</h3>
+            <h3 id="blue-header">MAXIMUS MTB TOURS, 2018</h3>
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="js/index-form.js"></script>
