--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
             </section>
         </div>
         <footer>
-            <h5 id="blue-header">MAXIMUS MTB TOURS, 2018</h5>
+            <h6 id="blue-header">MAXIMUS MTB TOURS, 2018</h6>
+            <h6 src="http://simwebstudio.com/">Створено SIMWEBSTUDIO</h6>
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="js/index-form.js"></script>
