--- a/index.html
+++ b/index.html
@@ -25,25 +25,26 @@
             <section id="mainblock">
                 <h1 id="mtb-header">MAXIMUS МТБ ТУРИ</h1>
                 <h3 id="mtb-sub">Організація турів на велосипедах в Карпатах</h3>
-                <button type="button" class="btn btn-danger btn-lg" href="#contacts">ЗАМОВИТИ</button>
+                <a href="#contacts">
+                <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button></a>
             </section>
         </div>
         <div class="why">
-            <h2 id="blue-header">ЧОМУ ВАМ ПОТРІБНО ВІДПРАВИТИСЬ В ТУР?</h2>
+            <h2 class="blue-header">ЧОМУ ВАМ ПОТРІБНО ВІДПРАВИТИСЬ В ТУР?</h2>
             <div class="whyblock">
                 <section id="whyiconblock1">
                     <img src="img/photo-icon.jpg" id="photo-icon" alt="фотоапарат іконка">
-                    <h4 id="blue-header">НОВІ ВРАЖЕННЯ</h4>
+                    <h4 class="blue-header">НОВІ ВРАЖЕННЯ</h4>
                     <p>Отримайте нові враження та відчуття, якими можна поділитись з друзями та запам'ятати їх на все життя.</p>
                 </section>
                 <section id="whyiconblock2">
                     <img src="img/off-icon.jpg" id="off-icon" alt="виключення іконка">
-                    <h4 id="blue-header">ПЕРЕЗАВАНТАЖЕННЯ</h4>
+                    <h4 class="blue-header">ПЕРЕЗАВАНТАЖЕННЯ</h4>
                     <p>Адреналін допоможе Вам швидко зробити перезавантаження мислення та відкрити для себе нові горизонти.</p>
                 </section>
                 <section id="whyiconblock3">
                     <img src="img/heart-icon.jpg" id="heart-icon" alt="серцебиття іконка">
-                    <h4 id="blue-header">АКТИВНІСТЬ</h4>
+                    <h4 class="blue-header">АКТИВНІСТЬ</h4>
                     <p>Велосипедні тури в горах допоможуть Вам зробити тіло витривалішим та готовим до будь-яких випробувань</p>
                 </section>
             </div>
@@ -51,37 +52,39 @@
         <div class="chooseyourtour">
             <section id="choosetour1"></section>
             <section id="choosetour2">
-                <h3 id="blue-header">СЛАВСЬКЕ - ПЕРЕВАЛ БЕСКИД - ВОДОСПАД ШИПІТ</h3>
-                <button type="button" class="btn btn-danger btn-lg" href="#contacts">ЗАМОВИТИ</button>
+                <h3 class="blue-header">СЛАВСЬКЕ - ПЕРЕВАЛ БЕСКИД - ВОДОСПАД ШИПІТ</h3>
+                <a href="#contacts">
+                <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button></a>
             </section>
             <section id="choosetour3"></section>
             <section id="choosetour4">
-                <h3 id="blue-header">ВОЛОВЕЦЬ - ПОЛОНИНА БОРЖАВА - ВОДОСПАД ШИПІТ</h3>
-                <button type="button" class="btn btn-danger btn-lg" href="#contacts">ЗАМОВИТИ</button>
+                <h3 class="blue-header">ВОЛОВЕЦЬ - ПОЛОНИНА БОРЖАВА - ВОДОСПАД ШИПІТ</h3>
+                <a href="#contacts">
+                <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button></a>
             </section>
         </div>
         <div class="rewievs">
             <div class="ourclients">
                 <section id="testomonials">
-                    <h2 id="blue-header">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
+                    <h2 class="blue-header">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
                 </section>
                 <section id="client1">
                     <img src="img/client-vasyl.png" id="client-photo" alt="василь багдай">
                     <p>Поїздка видалась наповнена шаленою кількістю адреналіну! Ми зарядились енергією для нових досягнень. Дякую!</p>
-                    <h4 id="blue-header">Василь Багдай</h4>
+                    <h4 class="blue-header">Василь Багдай</h4>
                     <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
                 </section>
                 <section id="client2">
                     <img src="img/client-andriy.png" id="client-photo" alt="андрій гриник">
                     <p>Це була дуже насичена поїздка - гори та водоспад. Інструктор завжди підтримував нас. Організація на висоті! </p>
-                    <h4 id="blue-header">Андрій Гриник</h4>
+                    <h4 class="blue-header">Андрій Гриник</h4>
                     <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
                 </section>
             </div>
         </div>
         <div class="contact-us">
             <section id="contacts">
-                <h2 id="blue-header">КОНТАКТИ</h2>
+                <h2 class="blue-header">КОНТАКТИ</h2>
             </section>
             <section id="phone">
                 <a href="tel:+380637806566">
