--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
                     <h2 class="blue-header">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
                 </section>
                 <section id="client1">
-                    <img src="img/client-vasyl.png" id="client-photo" alt="василь багдай">
+                    <img src="img/client-vasyl.png" class="client-photo" alt="василь багдай">
                     <p>Поїздка видалась наповнена шаленою кількістю адреналіну! Ми зарядились енергією для нових досягнень. Дякую!</p>
                     <h4 class="blue-header">Василь Багдай</h4>
-                    <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
+                    <img src="img/review-stars.png" class="stars" alt="зірки відгуку">
                 </section>
                 <section id="client2">
-                    <img src="img/client-andriy.png" id="client-photo" alt="андрій гриник">
+                    <img src="img/client-andriy.png" class="client-photo" alt="андрій гриник">
                     <p>Це була дуже насичена поїздка - гори та водоспад. Інструктор завжди підтримував нас. Організація на висоті! </p>
                     <h4 class="blue-header">Андрій Гриник</h4>
-                    <img src="img/review-stars.png" id="stars" alt="зірки відгуку">
+                    <img src="img/review-stars.png" class="stars" alt="зірки відгуку">
                 </section>
             </div>
         </div>
