--- a/index.html
+++ b/index.html
@@ -22,94 +22,94 @@
                     <a href="#contacts">КОНТАКТИ</a>
                 </nav>
             </header>
-            <section id="mainblock">
+            <div id="mainblock">
                 <h1 id="mtb-header">MAXIMUS МТБ ТУРИ</h1>
                 <h3 id="mtb-sub">Організація турів на велосипедах в Карпатах</h3>
                 <a href="#contacts">
                 <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button></a>
-            </section>
+            </div>
         </div>
         <div class="why">
             <h2 class="blue-header">ЧОМУ ВАМ ПОТРІБНО ВІДПРАВИТИСЬ В ТУР?</h2>
             <div class="whyblock">
-                <section id="whyiconblock1">
+                <div id="whyiconblock1">
                     <img src="img/photo-icon.jpg" id="photo-icon" alt="фотоапарат іконка">
-                    <h4 class="blue-header">НОВІ ВРАЖЕННЯ</h4>
+                    <h5 class="blue-header">НОВІ ВРАЖЕННЯ</h5>
                     <p>Отримайте нові враження та відчуття, якими можна поділитись з друзями та запам'ятати їх на все життя.</p>
-                </section>
-                <section id="whyiconblock2">
+                </div>
+                <div id="whyiconblock2">
                     <img src="img/off-icon.jpg" id="off-icon" alt="виключення іконка">
-                    <h4 class="blue-header">ПЕРЕЗАВАНТАЖЕННЯ</h4>
+                    <h5 class="blue-header">ПЕРЕЗАВАНТАЖЕННЯ</h5>
                     <p>Адреналін допоможе Вам швидко зробити перезавантаження мислення та відкрити для себе нові горизонти.</p>
-                </section>
-                <section id="whyiconblock3">
+                </div>
+                <div id="whyiconblock3">
                     <img src="img/heart-icon.jpg" id="heart-icon" alt="серцебиття іконка">
-                    <h4 class="blue-header">АКТИВНІСТЬ</h4>
+                    <h5 class="blue-header">АКТИВНІСТЬ</h5>
                     <p>Велосипедні тури в горах допоможуть Вам зробити тіло витривалішим та готовим до будь-яких випробувань</p>
-                </section>
+                </div>
             </div>
         </div>
         <div class="chooseyourtour">
-            <section id="choosetour1"></section>
-            <section id="choosetour2">
-                <h3 class="blue-header">СЛАВСЬКЕ - ПЕРЕВАЛ БЕСКИД - ВОДОСПАД ШИПІТ</h3>
+            <div id="choosetour1"></div>
+            <div id="choosetour2">
+                <h4 class="blue-header">СЛАВСЬКЕ - ПЕРЕВАЛ БЕСКИД - ВОДОСПАД ШИПІТ</h4>
                 <a href="#contacts">
                 <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button></a>
-            </section>
-            <section id="choosetour3"></section>
-            <section id="choosetour4">
-                <h3 class="blue-header">ВОЛОВЕЦЬ - ПОЛОНИНА БОРЖАВА - ВОДОСПАД ШИПІТ</h3>
+            </div>
+            <div id="choosetour3"></div>
+            <div id="choosetour4">
+                <h4 class="blue-header">ВОЛОВЕЦЬ - ПОЛОНИНА БОРЖАВА - ВОДОСПАД ШИПІТ</h4>
                 <a href="#contacts">
                 <button type="button" class="btn btn-danger btn-lg">ЗАМОВИТИ</button></a>
-            </section>
+            </div>
         </div>
         <div class="rewievs">
             <div class="ourclients">
-                <section id="testomonials">
+                <div id="testomonials">
                     <h2 class="blue-header">ВІДГУКИ НАШИХ КЛІЄНТІВ</h2>
-                </section>
-                <section id="client1">
+                </div>
+                <div id="client1">
                     <img src="img/client-vasyl.png" class="client-photo" alt="василь багдай">
                     <p>Поїздка видалась наповнена шаленою кількістю адреналіну! Ми зарядились енергією для нових досягнень. Дякую!</p>
-                    <h4 class="blue-header">Василь Багдай</h4>
+                    <h5 class="blue-header">Василь Багдай</h5>
                     <img src="img/review-stars.png" class="stars" alt="зірки відгуку">
-                </section>
-                <section id="client2">
+                </div>
+                <div id="client2">
                     <img src="img/client-andriy.png" class="client-photo" alt="андрій гриник">
                     <p>Це була дуже насичена поїздка - гори та водоспад. Інструктор завжди підтримував нас. Організація на висоті! </p>
-                    <h4 class="blue-header">Андрій Гриник</h4>
+                    <h5 class="blue-header">Андрій Гриник</h5>
                     <img src="img/review-stars.png" class="stars" alt="зірки відгуку">
-                </section>
+                </div>
             </div>
         </div>
         <div class="contact-us">
-            <section id="contacts">
+            <div id="contacts">
                 <h2 class="blue-header">КОНТАКТИ</h2>
-            </section>
-            <section id="phone">
+            </div>
+            <div id="phone">
                 <a href="tel:+380637806566">
                     <img src="img/phone-icon.png" id="phoneimg" alt="телефон">
                 </a>
-            </section>
-            <section id="contactmail">
+            </div>
+            <div id="contactmail">
                 <a href="mailto:simon.ms777@gmail.com">
                     <img src="img/gmail-icon.png" id="emailimg" alt="емейл">
                 </a>
-            </section>
-            <section id="instagram">
+            </div>
+            <div id="instagram">
                 <a href="https://www.instagram.com/maximus_ride/">
                     <img src="img/instagram-icon.png" id="instagramimg" alt="інстаграм">
                 </a>
-            </section>
-            <section id="fb">
+            </div>
+            <div id="fb">
                 <a href="https://www.facebook.com/profile.php?id=100006927150781">
                     <img src="img/facebook-icon.png" id="fbimg" alt="фейсбук">
                 </a>
-            </section>
-            <section id="contactform">
+            </div>
+            <div id="contactform">
                 <h3>МИ ЗВ'ЯЖЕМОСЬ З ВАМИ</h3>
-            </section>
-            <section id="contactbody">
+            </div>
+            <div id="contactbody">
                 <form>
                     <div id="form-msg"></div>
                     <input type="text" id="name" placeholder="ІМ'Я" title="Напишіть нам, як до Вас звертатись" required>
@@ -118,10 +118,11 @@
                     <br>
                     <input type="submit" id="submit-contact-form" value="ВІДПРАВИТИ">
                 </form>
-            </section>
+            </div>
         </div>
         <footer>
-            <h6>MAXIMUS MTB TOURS, 2018</h6>
+            <h6 class="footer-header">MAXIMUS MTB TOURS, 2018</h6>
+            <a href="http://simwebstudio.com/"><h6 class="footer-text">Створено SIMWEBSTUDIO</h6></a>
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="js/index-form.js"></script>
